Includes do demo!

--- a/dom/Makefile
+++ b/dom/Makefile
@@ -1,12 +1,18 @@
 include ../Makefile.inc
 
-OBJS = tree.o
+OBJS = list.o tree.o node.o
 
 all: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS)
 
-tree.o: tree.h tree.c
+tree.o: tree.h tree.c macros.h
 	$(CC) $(CFLAGS) -c tree.c
+
+list.o: list.h list.c macros.h
+	$(CC) $(CFLAGS) -c list.c
+
+node.o: node.h node.c macros.h
+	$(CC) $(CFLAGS) -c node.c
 
 clean:
 	rm -rf *~ *.out $(OBJS)
