--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,10 +1,10 @@
 include ../Makefile.inc
 
-parser: parser.y parser.l parser.h parser.c
+all: parser.y parser.l dom_parser.h dom_parser.c
 	yacc -d parser.y
 	lex parser.l
-	$(CC) $(CFLAGS) -c parser.c
-	$(CC) $(CFLAGS) -ll -c lex.yy.c y.tab.c
+	$(CC) $(CFLAGS) -c dom_parser.c
+	$(CC) -ll -c lex.yy.c y.tab.c
 
 clean:
 	rm -rf *~ *.o lex.yy.c y.tab.[hc] *.out $(OUT)
