--- a/parser/Makefile
+++ b/parser/Makefile
@@ -7,4 +7,4 @@ all: parser.y parser.l dom_parser.h dom_parser.c
 	$(CC) -ll -c lex.yy.c y.tab.c
 
 clean:
-	rm -rf *~ *.o lex.yy.c y.tab.[hc] *.out $(OUT)
+	rm -rf *~ *.o lex.yy.c y.tab.[hc] *.out
