--- a/selectors/Makefile
+++ b/selectors/Makefile
@@ -1,10 +1,9 @@
 include ../Makefile.inc
 
-all: parser.y parser.l query_parser.h query_parser.c
-	yacc -d parser.y
-	lex parser.l
-	$(CC) $(CFLAGS) -c query_parser.c
-	$(CC) -ll -c lex.yy.c y.tab.c
+all: query_parser.o
+	
 
+query_parser.o: query_parser.c query_parser.h
+	$(CC) $(CFLAGS) -c query_parser.c
 clean:
-	rm -rf *~ *.o lex.yy.c y.tab.[hc] *.out $(OUT)
+	rm -rf *~ *.out
