--- a/parser/Makefile
+++ b/parser/Makefile
@@ -4,7 +4,7 @@ all: parser.y parser.l dom_parser.h dom_parser.c
 	yacc -d parser.y
 	lex parser.l
 	$(CC) $(CFLAGS) -c dom_parser.c
-	$(CC) -ll -c lex.yy.c y.tab.c
+	$(CC) -lfl -g -c lex.yy.c y.tab.c
 
 clean:
 	rm -rf *~ *.o lex.yy.c y.tab.[hc] *.out
