--- a/data_structures/Makefile
+++ b/data_structures/Makefile
@@ -4,9 +4,9 @@ OBJS = rbtree.o stack.o
 
 all: $(OBJS)
 
-rbtree.o: rbtree.h rbtree.c
+rbtree.o: ../include/rbtree.h rbtree.c
 	$(CC) $(CFLAGS) -c rbtree.c
-stack.o: stack.h stack.c
+stack.o: ../include/stack.h stack.c
 	$(CC) $(CFLAGS) -c stack.c
 
 clean:
