--- a/dom/Makefile
+++ b/dom/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
-OBJS = node.o numbers.o bson.o serialize.o
-includes = ../include/node.h ../include/bson.h ../include/serializer.h
+OBJS = node.o numbers.o bdom.o serialize.o byte_buffer.o
+includes = ../include/node.h ../include/bdom.h ../include/serializer.h ../include/byte_buffer.h
 
 all: $(OBJS)
 
