Já tirei o remove_duplicates e o quick_sort. Acabei por ter de tirar o merge_lists. O código ainda existe, simplesmente não o estamos a usar.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,5 +1,5 @@
 # common definitions
 
 CC = gcc
-CFLAGS = -Wall -g -DDEBUG
-LEXFLAGS = -lfl -DDEBUG -g -c
+CFLAGS = -Wall -g -DDEBUG -pg
+LEXFLAGS = -lfl -DDEBUG -g -pg -c
