Patched selectors/Makefile to compile eregex.c

--- a/selectors/Makefile
+++ b/selectors/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 OBJS = query_parser.o query_runner.o
-includes = ../include/query_parser.h ../include/query_runner.h
+includes = ../include/query_parser.h ../include/query_runner.h ../include/eregex.h
 
 all: $(OBJS)
 
