--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,5 +1,5 @@
 # common definitions
 
 CC = gcc
-CFLAGS = -Wall -g -DDEBUG -pg
-LEXFLAGS = -DDEBUG -g -pg -c
+CFLAGS = -Wall -g -DDEBUG
+LEXFLAGS = -DDEBUG -g -c
