Acabei de fazer um patch ao parser. Agora o "front end" chama-se lxq_parser em vez de dom_parser, a função parse_dom chama-se parse_xml e fiz uma parse_xml_from_string.

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
-all: lex.yy.c ../include/y.tab.h y.tab.c ../include/dom_parser.h dom_parser.c
-	$(CC) $(CFLAGS) -c dom_parser.c
+all: lex.yy.c ../include/y.tab.h y.tab.c ../include/lxq_parser.h lxq_parser.c
+	$(CC) $(CFLAGS) -c lxq_parser.c
 	$(CC) $(LEXFLAGS) lex.yy.c y.tab.c
 
 lex.yy.c ../include/y.tab.h y.tab.c: parser.y parser.l
