added custom simple operators as well as extended operators

--- a/selectors/Makefile
+++ b/selectors/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.inc
 
-OBJS = query_parser.o query_runner.o eregex.o
+OBJS = query_parser.o query_runner.o eregex.o custom_selectors.o
 includes = ../include/query_parser.h ../include/query_runner.h ../include/eregex.h
 
 all: $(OBJS)
