--- a/dom/Makefile
+++ b/dom/Makefile
@@ -1,8 +1,8 @@
 include ../Makefile.inc
 
 
-OBJS = node.o numbers.o serialize.o huffman.o
-includes = ../include/node.h ../include/serializer.h ../include/bitbuffer.h ../includes/huffman.h ../include/byte_buffer.h
+OBJS = node.o numbers.o serialize.o
+includes = ../include/node.h ../include/serializer.h ../include/byte_buffer.h
 
 
 all: $(OBJS)
