report, some more tests, options for the tests not really working

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,10 @@
 include ../Makefile.inc
 
-all:
-	$(CC) -o dom_parser $(CFLAGS) ../libxmlquery.so -I../include test.c 
+all: exec tests
+
+exec:
+	$(CC) -o dom_parser $(CFLAGS) ../libxmlquery.so -I../include test.c
+
+tests: exec
+	./tests
+
