fixed bug where multiple CDATA blocks would be read together

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,5 +1,6 @@
 # common definitions
 
 CC = gcc
-CFLAGS = -Wall -g -DDEBUG
-LEXFLAGS = -DDEBUG -g -c
+CFLAGS = -Wall -Os -g -DDEBUG
+LEXFLAGS = -DDEBUG -c -g -Os
+
